// Vitest Snapshot v1

exports[`<Header/> > should render authenticated header 1`] = `
<div>
  <div>
    <div
      class="navbar bg-base-100 sm:mb-16"
    >
      <div
        class="flex-1 text-primary"
      >
        <div />
      </div>
      <div
        class="flex-none gap-2"
      >
        <div
          class="dropdown dropdown-end"
        >
          <button
            class="btn btn-ghost"
            tabindex="0"
            type="button"
          >
            My Account
          </button>
          <ul
            class="mt-3 p-2 shadow menu menu-compact dropdown-content bg-base-100 rounded-box w-52"
            role="menu"
            tabindex="0"
          >
            <li>
              <div />
            </li>
            <li>
              <div
                role="button"
                tabindex="0"
              >
                Logout
              </div>
            </li>
          </ul>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Header/> > should render unauthenticated header 1`] = `
<div>
  <div>
    <div
      class="navbar bg-base-100 sm:mb-16"
    >
      <div
        class="flex-1 text-primary"
      >
        <div />
      </div>
      <div
        class="flex-none gap-2"
      >
        <div />
      </div>
    </div>
  </div>
</div>
`;
